plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.workout'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

configurations {
	all {
		exclude group: 'org.slf4j', module: 'slf4j-simple'
	}
}

dependencies {
	// Spring
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Lombok
	compileOnly 'org.projectlombok:lombok:1.18.32'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'
	testCompileOnly 'org.projectlombok:lombok:1.18.32'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'it.ozimov:embedded-redis:0.7.3'
	testRuntimeOnly 'com.h2database:h2'

	// JPA & DB
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Flyway Core와 사용하는 DB에 맞는 드라이버 추가
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'

	// Security
	implementation "org.springframework.boot:spring-boot-starter-security"

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.session:spring-session-data-redis'

	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
}

tasks.withType(Test) {
	useJUnitPlatform()
	jvmArgs(
			"-javaagent:${classpath.find { it.name.contains('byte-buddy-agent') }.absolutePath}"
	)
}